--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
 	}
 }
 
@@ -14,6 +15,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 group = 'com.agilechuckwagon'
 version = '0.0.1-SNAPSHOT'
@@ -24,13 +26,22 @@ repositories {
 }
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-devtools')
 	compile('org.springframework.boot:spring-boot-starter-data-couchbase-reactive')
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-mustache')
-	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web-services')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	compile("org.springframework.boot:spring-boot-starter-data-jpa:1.3.5.RELEASE")
+	compile("com.h2database:h2:1.4.191")
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
 	testCompile('org.springframework.security:spring-security-test')
+
+    compile('org.junit.platform:junit-platform-engine:1.1.0')
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.1.0')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.1.0')
+    testRuntime('org.junit.platform:junit-platform-console:1.1.0')
 }
