--- a/java/build.gradle
+++ b/java/build.gradle
@@ -27,14 +27,14 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-devtools')
-	compile('org.springframework.boot:spring-boot-starter-aop')
-	compile('org.springframework.boot:spring-boot-starter-data-couchbase-reactive')
-	compile('org.springframework.boot:spring-boot-starter-hateoas')
-	compile('org.springframework.boot:spring-boot-starter-mustache')
-	compile('org.springframework.boot:spring-boot-starter-web-services')
-	compile('org.springframework.boot:spring-boot-starter-webflux')
-
-	compile("org.springframework.boot:spring-boot-starter-data-jpa:1.3.5.RELEASE")
+	compile('org.springframework.boot:spring-boot-starter')
+//	compile('org.springframework.boot:spring-boot-starter-aop')
+//	compile('org.springframework.boot:spring-boot-starter-data-couchbase-reactive')
+//	compile('org.springframework.boot:spring-boot-starter-hateoas')
+//	compile('org.springframework.boot:spring-boot-starter-mustache')
+//	compile('org.springframework.boot:spring-boot-starter-web-services')
+//	compile('org.springframework.boot:spring-boot-starter-webflux')
+//	compile("org.springframework.boot:spring-boot-starter-data-jpa:1.3.5.RELEASE")
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
